syntax = "proto3";

message Profile {
    string handle                 = 1;
    string name                   = 2;
    string location               = 3;
    string about                  = 4;
    string shortDescription       = 5;
    string website                = 6;
    string email                  = 7;
    string phoneNumber            = 8;
    repeated SocialAccount social = 9;

    bool nsfw                     = 10;
    bool vendor                   = 11;
    bool moderator                = 12;

    string primaryColor           = 13;
    string secondaryColor         = 14;
    string textColor              = 15;

    // The following data is added to the profile
    // automatically by the server and may be omitted
    // when setting the profile via api.

    Image avatarHashes            = 16;
    Image headerHashes            = 17;

    uint32 followerCount          = 18;
    uint32 followingCount         = 19;
    uint32 listingCount           = 20;

    uint32 lastModified           = 21;

    message SocialAccount {
        string type     = 1;
        string username = 2;
        string proof    = 3;
    }

    message Image {
        string tiny     = 1;
        string small    = 2;
        string medium   = 3;
        string large    = 4;
        string original = 5;
    }
}
